# ExMateria-SPU-Core

./: CMakeLists.txt  README.md  fft_adsr_envelope.cpp  fft_adsr_envelope.h  fft_pitch_tools.cpp  fft_pitch_tools.h  fft_smd_sequence_model.h  fft_smd_sequencer_core.cpp  fft_smd_sequencer_core.h  fft_smd_sequencer_tools.cpp  fft_smd_sequencer_tools.h  fft_spu_core_runtime.cpp  fft_spu_core_runtime.h  fft_spu_core_state_tools.cpp  fft_spu_core_state_tools.h  fft_spu_lfo_tools.cpp  fft_spu_lfo_tools.h  fft_spu_mix_tools.cpp  fft_spu_mix_tools.h  fft_spu_pitch_runtime.cpp  fft_spu_pitch_runtime.h  fft_spu_replay_mix_tools.cpp  fft_spu_replay_mix_tools.h  fft_spu_reverb.cpp  fft_spu_reverb.h  fft_spu_sample_runtime.cpp  fft_spu_sample_runtime.h  fft_spu_voice_runtime.cpp  fft_spu_voice_runtime.h  fft_spu_voice_tools.cpp  fft_spu_voice_tools.h
.github/workflows/: build.yml  release.yml
detail/: fft_gauss_table.inc  pitch_tables.inc
